--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <div>My name is Sergey</div>
 <div>i am the best of the best of the best</div>
+<div>i am the best of the best of the best</div>
+<div>i am the best of the best of the best</div>
